
* : fixed
- : removed
! : changed
+ : added

Month day, 2005 - 3.8.1
! FreeImage now uses libTIFF 3.7.4
* [Carsten Klein] FreeImage_Dither and FreeImage_Threshold now work with palettized 8-bit dib
* [Christophe Petit] fixed a bug in FreeImage_GetFIFFromFilenameU occuring with files without extension
* [Leigh Brasington] fixed a bug in PluginGIF causing FreeImage not working on Win/98/ME

September 5, 2005 - 3.8.0
! FreeImage now uses libTIFF 3.7.3
! FreeImage now uses ZLib 1.2.3
+ [Herve Drolon] added support for 48-bit images to FreeImage_ConvertTo24Bits
+ [Herve Drolon] added FreeImage_ConvertToGreyscale
+ [Herve Drolon] added support for 16-bit greyscale images to FreeImage_ConvertTo8Bits
+ [Petr Pytelka] added UNICODE functions (see below) 
                 added FreeImage_LoadU
                 added FreeImage_SaveU
                 added FreeImage_GetFIFFromFilenameU
                 added FreeImage_GetFileTypeU
+ [Herve Drolon] FreeImage_Copy now works with any bitmap type
+ [Herve Drolon] added support for 1-bit images to FreeImage_Paste
* [Ryan Rubley] fixed PluginGIF failing to link on some broken gcc versions
* [Karl-Heinz Bussian] fixed a bug in LookupX11Color/LookupSVGColor with handling of grey color names
* [Herve Drolon] FreeImage_Dither now uses FreeImage_ConvertToGreyscale and handles 4/8-bit palletized images
* [Herve Drolon] FreeImage_Threshold now uses FreeImage_ConvertToGreyscale and handles 4/8-bit palletized images
* [Craig Hockenberry] fixed PluginGIF::Save swapping the byte order for the height on big endian machines (e.g. PPC on Mac OS X.)
* [Herve Drolon] fixed a bug in JPEG plugin when reading Exif maker notes from images produced by Nikon Editor
* [Herve Drolon] fixed a bug in BMP plugin when reading some malformed RLE8 bmp
* [Herve Drolon] fixed a bug in RAS plugin when loading 8-bit palettized images with less than 256 colors
* [Herve Drolon] fixed a bug in FreeImage_Rescale with 16-,48-,64-bit images